ver 0.4 add covid infomation

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <div id="map" ></div>
     <button>❌</button>
   </div>
+  <button class="covid-btn">코로나 현황</button>
   <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=a9021eeadcfa641e0642ace4c6dd33f6"></script>
   <script src="start.js"></script>
   <script src="clock.js"></script>
@@ -51,5 +52,6 @@
   <script src="bg.js"></script>
   <script src="todo.js"></script>
   <script src="weather.js"></script>
+  <script src="covid.js"></script>
 </body>
 </html>
